--- a/client/views/includes/register.html
+++ b/client/views/includes/register.html
@@ -5,7 +5,7 @@
   <form class='register-form' class="form-inline">
     <input id="register-input" class="input-small" ng-model="user.username" name="username" type="text" placeholder="username">
     <input id="register-input" class="input-small" ng-model="user.email" name="email" type="text" placeholder="email">
-    <input id="register-input" class="input-small" ng-model="user.password" name="password" type="text" placeholder="password">
+    <input id="register-input" class="input-small" ng-model="user.password" name="password" type="password" placeholder="password">
   </form>
   <div ng-hide='showErr' class='register-btn-container'>
     <a id='login' ng-click="landingCtrl.validateRegistration();" class="btn btn-md btn-custom-back">Register</a>
