--- a/client/views/includes/navbar.html
+++ b/client/views/includes/navbar.html
@@ -22,6 +22,7 @@
         <ul class="dropdown-menu">
           <li><a href="">Settings</a></li>
           <li><a href="">Change Password</a></li>
+          <li ng-click='navBarCtrl.dropdown("upload")'><a href="">Upload Profile Image</a></li>
           <li ng-click='navBarCtrl.dropdown("logout")'><a href="">Logout</a></li>
         </ul>
       </li>
