--- a/server/views/mailer/invite.html
+++ b/server/views/mailer/invite.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width" />
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>Alerts e.g. approaching your limit</title>
-  <link href="styles.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="invite.css" media="all" rel="stylesheet" type="text/css" />
 </head>
 
 <body itemscope itemtype="http://schema.org/EmailMessage">
@@ -17,30 +17,29 @@
           <table class="main" width="100%" cellpadding="0" cellspacing="0">
             <tr>
               <td class="alert alert-warning">
-                Warning: You're approaching your limit. Please upgrade.
+                Room Baby
               </td>
             </tr>
             <tr>
               <td class="content-wrap">
                 <table width="100%" cellpadding="0" cellspacing="0">
                   <tr>
-                    <td class="content-block">
-                      You have <strong>1 free report</strong> remaining.
+                    <td class="content-block aligncenter">
+                      You've been invited to a room at Room Baby.
                     </td>
                   </tr>
                   <tr>
-                    <td class="content-block">
-                      Add your credit card now to upgrade your account to a premium plan to ensure you don't miss out on any reports.
+                    <td class="content-block aligncenter">
+                    Please login into your account now with either your facebook or email.
                     </td>
                   </tr>
                   <tr>
-                    <td class="content-block">
-                      <a href="http://www.mailgun.com" class="btn-primary">Upgrade my account</a>
+                    <td class="content-block aligncenter">
+                      <a href="http://www.mailgun.com" class="btn-primary">Let's Go!</a>
                     </td>
                   </tr>
                   <tr>
-                    <td class="content-block">
-                      Thanks for choosing Acme Inc.
+                    <td class="content-block aligncenter">- Room Baby Mailer -
                     </td>
                   </tr>
                 </table>
