updates fb login

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -17,19 +17,18 @@
   <link rel="stylesheet" href="/build/vendor.min.css">
   <link rel="stylesheet" href="/build/dev.min.css">
   <link rel="shortcut icon" href="https://raw.githubusercontent.com/scottjason/room-baby/master/client/assets/img/rb-favicon-64.png" />
-
-
   <!--[if lt IE 9]>
         <script src="/bower_components/html5shiv/dist/html5shiv.js"></script>
     <![endif]-->
   <script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId: '921064881267563',
-      xfbml: true,
-      version: 'v2.3'
-    });
-  };
+  < script >
+    window.fbAsyncInit = function() {
+      FB.init({
+        appId: '921064881267563',
+        xfbml: true,
+        version: 'v2.4'
+      });
+    };
 
   (function(d, s, id) {
     var js, fjs = d.getElementsByTagName(s)[0];
