--- a/client/styles/landing.css
+++ b/client/styles/landing.css
@@ -1,3 +1,17 @@
+.how-this-works {
+  position: absolute;
+  text-align: center;
+  color: #79DFB6;
+  right: 0;
+  bottom: 180px;
+  left: 548px;
+  font-size: 18px;
+  font-weight: 300;
+  white-space: nowrap;
+  cursor: pointer;
+  opacity: 0;
+}
+
 .reset-message {
   font-size: 14px;
   color: orange;
@@ -269,7 +283,7 @@ a.logo-text:active {
   border-color: #d0314f;
   margin-top: -26px;
   margin-bottom: 0;
-  width: 70%;
+  width: 680px;`
 }
 
 .slogan-text {
