--- a/client/styles/global.css
+++ b/client/styles/global.css
@@ -1,9 +1,8 @@
-
 @font-face {
   font-family: 'brandon_grotesquethin';
   src: url('../assets/fonts/brandon_thin-webfont.eot');
   src: url('../assets/fonts/brandon_thin-webfont.eot?#iefix') format('embedded-opentype'), url('../assets/fonts/brandon_thin-webfont.woff2') format('woff2'), url('../assets/fonts/brandon_thin-webfont.woff') format('woff'), url('../assets/fonts/brandon_thin-webfont.ttf') format('truetype'), url('../assets/fonts/brandon_thin-webfont.svg#brandon_grotesquethin') format('svg');
-  font-weight: normal;
+  font-weight: 300;
   font-style: normal;
 }
 
@@ -16,6 +15,7 @@ body {
   background: linear-gradient(90deg, #517fa4 10%, #243949 90%);
   font-family: 'Open Sans', sans-serif;
   overflow: hidden;
+  height: 100%;
 }
 
 dl,
@@ -27,6 +27,18 @@ ul {
 
 li {
   display: inline;
+}
+
+.global {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+}
+
+.global.overflow-y {
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 div.body-overlay {
