--- a/server/views/index.html
+++ b/server/views/index.html
@@ -13,6 +13,7 @@
   <title>Room Baby</title>
   <!-- Start Lib CSS Build -->
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Bad+Script' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/build/vendor.min.css">
   <link rel="stylesheet" href="/build/dev.min.css">
