--- a/client/styles/landing.css
+++ b/client/styles/landing.css
@@ -1,4 +1,24 @@
+p.how-this-works-landing {
+  position: relative;
+  color: #FF9400;
+  white-space: nowrap;
+  cursor: pointer;
+  text-align: center;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 100px;
+  font-size: 26px;
+  font-family: 'Bad Script', cursive;
+  color: #fff;
+  text-shadow: 4px 4px 3px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+}
 
+.container {
+  padding-right: 0 !important;
+  padding-left: 0 !important;
+}
 
 .reset-message {
   font-size: 14px;
@@ -180,7 +200,7 @@ form.login-form {
   min-width: 300px;
   position: relative;
   height: 500px;
-  top: -50px;
+  bottom: 140px;
 }
 
 p.auth-options-copy {
@@ -209,15 +229,14 @@ p.auth-options-copy {
 }
 
 .landing-btn-container {
-  max-width: 300px;
-  position: relative;
-  width: 493px;
+  position: absolute;
+  width: 100%;
   height: 107px;
   left: 0;
   right: 0;
   top: -20px;
-  margin: auto;
   background-color: transparent;
+  margin: auto;
 }
 
 .facebook-btn-container {
@@ -264,14 +283,26 @@ a.logo-text:active {
   cursor: pointer;
   text-decoration: none;
   position: relative;
-  top: -4px;
+  top: 20px;
 }
 
 .landing-line {
   border-color: #d0314f;
-  margin-top: -26px;
-  margin-bottom: 0;
   width: 680px;
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
+}
+
+.landing-line-btm {
+  border-color: #d0314f;
+  width: 300px;
+  position: relative;
+  margin: auto;
+  left: 0;
+  right: 0;
+  top: 128px;
 }
 
 .slogan-text {
