--- a/client/views/dashboard.html
+++ b/client/views/dashboard.html
@@ -21,5 +21,5 @@
     </div>
   </div>
   <div ng-show='dashCtrl.showTable()' ng-include src="'views/includes/dashboard-sessions.html'"></div>
-  <div ng-hide='!isLoaded || dashCtrl.showTable() || dashCtrl.getState("overlay").isOpen' ng-include src="'views/includes/no-sessions.html'"></div>
+  <div ng-hide='!isLoaded || dashCtrl.showTable() || dashCtrl.getState("overlay").isOpen || isLogout' ng-include src="'views/includes/no-sessions.html'"></div>
 </div ng-overlay>
