--- a/client/views/landing.html
+++ b/client/views/landing.html
@@ -1,5 +1,5 @@
 <ng-enter on-forgot-password-='onForgotPassword()'>
-  <div ng-show='showLanding' class="container landing-container" ng-init="landingCtrl.getState(); landingCtrl.isAuthenticated(); landingCtrl.onReady();">
+  <div ng-show='showLanding' class="container landing-container" ng-init="landingCtrl.isMobile(); landingCtrl.getState(); landingCtrl.isAuthenticated(); landingCtrl.onReady();">
     <div class="col-md-12 text-center">
       <div class="row vertical-align-landing">
         <div class="cover">
@@ -8,7 +8,7 @@
           <div class="landing-sub-text-container">
             <p class="text-inverse slogan-text">a room for every occassion</p>
           </div>
-          <div ng-hide="showLogin || showRegister" class="landing-sub-text-container">
+          <div ng-show="!showLogin || !showRegister || !isMobile" class="landing-sub-text-container">
             <div class="landing-btn-container">
               <div class="facebook-btn-container">
                 <a id='facebook' ng-click="landingCtrl.onOptSelected('facebook');" class="btn btn-md btn-custom-facebook"><i class="fa fa-facebook"></i>Connect With Facebook</a>
