--- a/client/styles/global.css
+++ b/client/styles/global.css
@@ -36,6 +36,10 @@ li {
   bottom: 0;
 }
 
+.global.set-width-320 {
+  width: 320px !important;
+}
+
 .global.overflow-y {
   overflow-y: scroll;
   overflow-x: hidden;
