--- a/server/views/index.html
+++ b/server/views/index.html
@@ -44,7 +44,7 @@
 </head>
 
 <body ng-app="RoomBaby">
-  <div class='global' ng-controller='GlobalCtrl' ng-init='registerEvents();' ng-class='{ "overflow-y" : (showOverflow) }'>
+  <div class='global' ng-controller='GlobalCtrl' ng-init='registerEvents();' ng-class='{ "overflow-y" : (showOverflow), "set-width-320" : isMobile() }'>
     <div ng-include src="'views/includes/navbar.html'"></div>
     <div id="fb-root"></div>
     <div ui-view></div>
