--- a/server/views/index.html
+++ b/server/views/index.html
@@ -9,7 +9,8 @@
   <base href="/"></base>
   <meta charset="utf-8">
   <meta author="Scott Jason">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width; initial-scale = 1.0; maximum-scale=1.0; user-scalable=no">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <title>Room Baby</title>
   <!-- Start Lib CSS Build -->
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
