--- a/client/styles/global.css
+++ b/client/styles/global.css
@@ -37,7 +37,8 @@ li {
 }
 
 .global.set-width-320 {
-  width: 320px !important;
+  width: 100%;
+  overflow: hidden !important;
 }
 
 .global.overflow-y {
