--- a/server/views/index.html
+++ b/server/views/index.html
@@ -9,7 +9,7 @@
   <base href="/"></base>
   <meta charset="utf-8">
   <meta author="Scott Jason">
-  <meta name="viewport" content="width=device-width; initial-scale = 1.0; maximum-scale=1.0; user-scalable=no">
+  <meta name="viewport" content="width=device-width; initial-scale = 1.0; maximum-scale=1.0; user-scalable=0">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <title>Room Baby</title>
   <!-- Start Lib CSS Build -->
