--- a/client/styles/landing.css
+++ b/client/styles/landing.css
@@ -1,3 +1,70 @@
+.username-line {
+  width: 370px;
+  height: 1px;
+  background-color: rgba(255, 255, 255, .6);
+  text-align: center;
+  position: relative;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 7px;
+}
+
+.complete-registration {
+  font-size: 15px;
+  font-weight: 300;
+  color: rgba(255, 255, 255, .8);
+  white-space: normal;
+  position: relative;
+  bottom: 0;
+  top: 53px;
+  text-align: center;
+}
+
+.on-file {
+  font-size: 15px;
+  font-weight: 300;
+  color: #fff;
+  white-space: normal;
+  position: relative;
+  bottom: 0;
+  top: 33px;
+  text-align: center;
+}
+
+.sent-off {
+  font-size: 15px;
+  font-weight: 300;
+  color: #fff;
+  white-space: normal;
+  position: relative;
+  bottom: 0;
+  top: 32px;
+  text-align: center;
+}
+
+.on-file > span {
+  color: orange;
+}
+
+.registration-error {
+  position: absolute;
+  color: orange;
+  left: 0;
+  right: 0;
+  bottom: 120px;
+  text-align: center;
+  font-size: 14px;
+}
+
+input#landing-input-username {
+  background: transparent;
+  border: 1px solid #337ab7;
+  border-radius: 15px;
+  width: 200px;
+  padding-left: 13px;
+}
+
 .is-mobile {
   color: white;
   font-size: 16px;
