--- a/client/views/ngDialog/facebook.html
+++ b/client/views/ngDialog/facebook.html
@@ -1,7 +1,13 @@
 <div class='overlay' ng-controller='FooterCtrl as footerCtrl'>
-  <p class='enter-username'>Please enter a username to identify yourself in the room</p>
+  <p class='welcome'>Welcome to Room Baby!</p>
+  <p class='enter-username'>please enter a username</p>
   <form id="userNameForm" name="authForm" class="form-inline" ng-submit="footerCtrl.onUserName();">
-    <input id="landing-input-email" class="input-small" ng-model="user.username" name="username" type="text" placeholder="Username">
+    <input id="landing-input-username" class="input-small" ng-model="user.username" name="username" type="text" placeholder="enter username">
     <button type="submit" class="btn btn-custom-landing">Submit</button>
   </form>
+    <p ng-hide='showUserNameErr' class='on-file'>The email address we have on file for you is <span> {{ footerCtrl.getEmail() }}</span></p>
+    <p ng-hide='showUserNameErr' class='sent-off'>A password has been created and emailed to you</p>
+    <p ng-hide='showUserNameErr' class='complete-registration'>This will complete your registration and you may now login with either facebook or email</p>
+    <div class='username-line'></div>
+    <p ng-show='showUserNameErr' class='username-error'>please enter a valid username</p>
 </div>
