--- a/client/views/ngDialog/profile-image.html
+++ b/client/views/ngDialog/profile-image.html
@@ -6,6 +6,7 @@
     </div>
   </div>
   <div ng-hide='showLoadingSpinner'>
+  <i ng-click='navCtrl.toggleUpload(true);' class="fa fa-times profile-img"></i>
     <p class='enter-username'>Please Upload Your File</p>
     <form id='uploadForm' class='upload-form'>
       <div class="choose-file">
