--- a/client/styles/upload.css
+++ b/client/styles/upload.css
@@ -1,3 +1,12 @@
+.upload-overlay {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, .5);
+}
+
 .choose-file {
   position: relative;
   display: inline-block;
@@ -31,4 +40,18 @@
   text-align: center;
   margin-top: -40px;
   font-size: 104px;
+}
+
+.fa.fa-times.profile-img {
+  position: absolute;
+  text-align: center;
+  margin: auto;
+  display: inline-block;
+  left: 610px;
+  right: 0;
+  color: #fff;
+  font-size: 24px;
+  width: 25px;
+  height: 27px;
+  bottom: 112px;
 }
