renders unclickable confirmation on recording request accepted

--- a/client/styles/landing.css
+++ b/client/styles/landing.css
@@ -6,7 +6,7 @@
   bottom: 0;
   margin: auto;
   text-align: center;
-  padding-top: 200px;
+  height: 330px;
 }
 
 .username-line {
@@ -284,14 +284,13 @@ form.login-form {
   font-size: 19px;
 }
 
-.landing-container {
+
+/*.landing-container {
   min-width: 300px;
   position: relative;
   height: 500px;
   bottom: 140px;
-}
-
-
+}*/
 
 p.auth-options-copy {
   color: white;
@@ -486,9 +485,8 @@ a#email {
   font-weight: 300;
 }
 
-/*@media (min-width: 320px) and (max-width: 580px) {
-  .landing-container {
-    bottom: 0;
+@media (min-width: 320px) and (max-width: 580px) {
+  .slogan-text {
+    font-size: 28px;
   }
 }
-*/
