--- a/client/styles/chat.css
+++ b/client/styles/chat.css
@@ -11,6 +11,15 @@
   color: #16a085;
 }
 
+#confirm {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  color: #16a085;
+  display: none;
+  cursor: default;
+  margin-right: 38px;
+}
+
 .media-object.img-circle {
   width: 35px;
   height: 35px;
