--- a/client/views/session.html
+++ b/client/views/session.html
@@ -1,3 +1,12 @@
+<div ng-show='showPermission' class='permission-overlay'>
+  <p class='record-permission'> {{ requestingUser }} would like to record this session</p>
+  <p class='is-ok'>Is this ok?</p>
+  <div class='permission-btn-container'>
+    <div class='is-granted-btn'><p>OK</p></div>
+    <div class='is-denied-btn'><p>No Thanks</p></div>
+  </div>
+</div>
+
 <div ng-init='sessionCtrl.isAuthenticated();'></div>
 <div id="layout-container"></div>
 <div class="span2 sidebar">
