--- a/client/views/includes/footer.html
+++ b/client/views/includes/footer.html
@@ -2,9 +2,6 @@
   <div ng-show='showFooter' id='footer-overlay'></div>
   <div ng-show='showFooter' ng-init='footerCtrl.registerEvents();' id='footer-btn-container' class="navbar navbar-default navbar-fixed-bottom text-center">
     <ul ng-hide='showFeatureDisabled || isRecording || showGeneratingVideo' id="footer-btns">
-<!--       <li>
-        <div id='share-file' ng-click='footerCtrl.onOptSelected("location")' class="btn-custom share-file">share location</div>
-      </li> -->
       <li>
         <div id='share-file' ng-click='footerCtrl.onOptSelected("upload")' class="btn-custom share-file">share a file</div>
       </li>
@@ -27,7 +24,7 @@
       </li>
     </ul>
     <ul ng-show='showGeneratingVideo'>
-      <p>Generating Video Link</p>
+      <p class="generating-copy">Generating Video Link<span><i class="fa fa-circle-o-notch fa-spin generating"></i></span></p>
     </ul>
   </div>
 </div>
