--- a/server/views/reset-password.html
+++ b/server/views/reset-password.html
@@ -2,23 +2,21 @@
 <html>
 
 <head>
-    <title>Reset Password</title>
-    <link rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.min.css' />
-    <link rel='stylesheet' type="text/css" href="/build/styles/build.css" />
+  <title>Reset Password</title>
+  <link rel='stylesheet' type="text/css" href="/build/dev.min.css" />
 </head>
 
 <body>
-    <h3>Reset your Room Baby Password Here</h3>
-    <p>You will be redirected on success to the login page where you can now login with your new password.</p>
-    <p>An additional email will be sent to confirm this change.</p>
-
-    <form action="/user/reset-submit" method="post">
-        <div class="form-group">
-            <label>Enter New Password</label>
-            <input type="password" class="form-control" name="password" required>
-        </div>
-        <button type="submit" class="btn btn-warning btn-lg">Reset Password</button>
-    </form>
+  <p class="server-reset-pass first">Reset your Room Baby Password Here</p>
+  <p class="server-reset-pass">An additional email will be sent to confirm this change.</p>
+  <div class="server-reset-pass-line"></div>
+  <form class='sever-reset-password-form' action="/user/reset-submit" method="post">
+    <div class="server-reset-pass-container">
+      <p class="server-enter-password">Enter New Password</p>
+      <input type="password" class="server-reset-pass-input" name="password" required>
+    </div>
+    <button type="submit" class="server-reset-pass-btn">Reset Password</button>
+  </form>
 </body>
 
 </html>
