comletes reset-password refactor, logic and sever-side templating

--- a/client/views/ngDialog/facebook.html
+++ b/client/views/ngDialog/facebook.html
@@ -8,7 +8,6 @@
     <button type="submit" class="btn btn-custom-landing">Submit</button>
   </form>
     <p  class='on-file'>The email address we have on file for you is <span> {{ footerCtrl.getEmail() }}</span></p>
-    <p  class='sent-off'>A password has been created and emailed to you</p>
-    <p  class='complete-registration'>This will complete your registration and you may now login with either facebook or email</p>
+    <p  class='complete-registration'>Please enter a username and a password will be emailed to you.<br> This will complete your registration and you may now login with either facebook or email</p>
     <div class='username-line'></div>
 </div>
