--- a/server/views/reset-password-expired.html
+++ b/server/views/reset-password-expired.html
@@ -2,13 +2,22 @@
 <html>
 
 <head>
-    <title>Expired</title>
-    <link rel='stylesheet' type="text/css" href="server-side.css" />
+  <title>Reset Password</title>
+  <link rel='stylesheet' type="text/css" href="/build/dev.min.css" />
 </head>
 
 <body>
-    <h3>Think link has expired</h3>
-    <div class='rb-return-btn'>return to room baby</div>
+  <p class="server-reset-pass first">Ooops! This link has expired. Please reset your password again.</p>
+  <div class="server-reset-pass-line"></div>
+  <div class="server-reset-password-success-container">
+    <p class="server-go-to">go to</p>
+    <button id='server-room-baby' class="server-reset-pass-btn">Room Baby</button>
+  </div>
 </body>
+<script>
+document.getElementById('server-room-baby').addEventListener('click', function(event) {
+  window.location.href = 'http://www.room-baby.com/';
+});
+</script>
 
 </html>
