--- a/client/styles/global.css
+++ b/client/styles/global.css
@@ -8,17 +8,15 @@
 
 html,
 body {
-  background: -webkit-linear-gradient(90deg, #517fa4 10%, #243949 90%);
-  background: -moz-linear-gradient(90deg, #517fa4 10%, #243949 90%);
-  background: -ms-linear-gradient(90deg, #517fa4 10%, #243949 90%);
-  background: -o-linear-gradient(90deg, #517fa4 10%, #243949 90%);
-  background: linear-gradient(90deg, #517fa4 10%, #243949 90%);
+  background: black;
   font-family: 'Open Sans', sans-serif;
   overflow: hidden;
   height: 100%;
 }
 
 * {
+  margin: 0;
+  padding: 0;
   outline: 0;
 }
 
@@ -31,6 +29,14 @@ ul {
 
 li {
   display: inline;
+}
+
+a {
+  text-decoration: none;
+}
+
+input {
+  outline: 0;
 }
 
 .global {
