--- a/client/views/includes/footer.html
+++ b/client/views/includes/footer.html
@@ -1,3 +1,8 @@
+<div class="disabled-container" ng-show='isDisabled'>
+  <div class="disabled-copy-container">
+    <p>DISABLED</p>
+  </div>
+</div>
 <div ng-controller='FooterCtrl as footerCtrl'>
   <div ng-show='showFooter' id='footer-overlay'></div>
   <div ng-show='showFooter' ng-init='footerCtrl.registerEvents();' id='footer-btn-container' class="navbar navbar-default navbar-fixed-bottom text-center">
