--- a/server/views/index.html
+++ b/server/views/index.html
@@ -13,7 +13,11 @@
   <title>Room Baby</title>
   <!-- Start Lib CSS Build -->
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Bad+Script' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,900' rel='stylesheet' type='text/css'>
+  
+  
+  <!-- <link href='https://fonts.googleapis.com/css?family=Bad+Script' rel='stylesheet' type='text/css'> -->
+  <link href="https://fontastic.s3.amazonaws.com/czRhdqnu6fqYHicX6saoQb/icons.css" rel="stylesheet">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/build/vendor.min.css">
   <link rel="stylesheet" href="/build/dev.min.css">
