--- a/client/views/includes/navbar.html
+++ b/client/views/includes/navbar.html
@@ -1,4 +1,4 @@
-<nav ng-hide='showBroadcast' ng-class="{'show-nav-bar': ( showNavBar )}" ng-controller='NavBarCtrl as navBarCtrl' ng-init='navBarCtrl.registerEvents();' class="navbar navbar-custom navbar-static-top">
+<nav ng-hide='showBroadcast || hideNavBar' ng-class="{'show-nav-bar': ( showNavBar )}" ng-controller='NavBarCtrl as navBarCtrl' ng-init='navBarCtrl.registerEvents();' class="navbar navbar-custom navbar-static-top">
   <div ng-class="{ 'body-overlay' : ( showOverlay ) }"></div>
 <div class="disabled-container" ng-show='isDisabled'>
   <div class="disabled-copy-container">
