--- a/client/views/landing.html
+++ b/client/views/landing.html
@@ -3,7 +3,7 @@
       <div class="disabled-container" ng-show='isDisabled'></div>
       <div class='landing-container-body'>
         <a href='' ng-click='landingCtrl.onOptSelected("roomBaby");' id='room-baby' class="text-inverse logo-text">room baby</a>
-        <p ng-click="landingCtrl.openOverlay();" class="how-it-works bottom">how it works</p>
+        <p ng-click="landingCtrl.openOverlay();" id='how-this-works' class="how-it-works bottom">how it works</p>
         <hr class="landing-line">
         <div class="landing-sub-text-container">
           <p ng-hide='landingCtrl.isMobile()' class="text-inverse slogan-text">a room for every occassion</p>
