--- a/client/styles/mobile/landing.css
+++ b/client/styles/mobile/landing.css
@@ -60,4 +60,54 @@
    .landing-btn-container {
      top: 10px;
    }
+   .overlay-container {
+     border: none;
+   }
+   .overlay-container.expand {
+     max-width: 300px;
+     -webkit-transition: 0.5s;
+     -moz-transition: 0.5s;
+     -o-transition: 0.5s;
+     transition: 0.5s;
+   }
+   .overlay-body {
+     width: 320px;
+     opacity: 0;
+   }
+   .exit-btn {
+     left: 0;
+     right: 0;
+     margin: auto;
+     margin-bottom: 10px;
+     position: relative;
+   }
+   p.overlay-copy {
+     position: relative;
+     text-align: left;
+     width: 280px;
+     padding: 0;
+     left: 12px;
+   }
+   h1.overlay-header.first {
+     padding-top: 61px;
+   }
+   h1.overlay-header.first,
+   h1.overlay-header {
+     font-size: 21px;
+     padding-left: 0;
+     left: 11px;
+   }
+   .header-copy {
+     position: relative;
+     right: 0;
+     font-size: 14px;
+     top: 60px;
+     width: 100%;
+     text-align: center;
+     font-weight: 400;
+   }
+   .logo-text-overlay {
+     padding-left: 52px !important;
+
+   }
  }
